# tta_devops

./: README.md
basic-ci/: main.py  pyproject.toml  requirements.txt
basic-ci/basic_ci/: datamodel.py  service.py
basic-ci/tests/: test_service.py
my-app/: Dockerfile  pyproject.toml
my-app-cd/: deploy.yaml  ghcr-secret.yaml
my-app/.github/workflows/: my-app-ci.yaml
my-app/my_app/: main.py
my-app/tests/: test_main.py
